# FuzzyClusteringNN-Limb

./: .gitignore  CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterDataSet.cpp  ClusterDataSet.h  Network.cpp  Network.h  Neuron.cpp  Neuron.h  README.md  Signal.cpp  Signal.h  TrainingData.cpp  TrainingData.h  main.cpp
trainingSamples/: generatedTrainingData.txt  liveData.txt
